about image updated

--- a/about.html
+++ b/about.html
@@ -312,38 +312,14 @@
                       class="img-fluid mb-4 wow zoomIn"
                       alt=""
                     />
-                    <div class="col-12 text-center">
-                      <div class="bg-color-2 text-light p-4">
-                        <div class="de_count wow fadeInUp">
-                          <h2 class="mb-0">
-                            <span
-                              class="timer"
-                              data-to="5"
-                              data-speed="3000"
-                            ></span
-                            >5 Acre
-                          </h2>
-                          <span>Development</span>
-                        </div>
-                      </div>
+                    <div class="col-12 text-center z-index-top">
+                      <img src="/img/ABT_1.jpg" alt="" class="img-fluid mb-4 wow zoomIn">
                     </div>
                   </div>
                   <div class="col-6">
                     <div class="spacer-single sm-hide"></div>
-                    <div class="col-12 text-center">
-                      <div class="bg-color text-light p-4">
-                        <div class="de_count wow fadeInUp">
-                          <h2 class="mb-0">
-                            <span
-                              class="timer"
-                              data-to="20"
-                              data-speed="3000"
-                            ></span
-                            >Lakh
-                          </h2>
-                          <span>Sq Ft</span>
-                        </div>
-                      </div>
+                    <div class="col-12 text-center z-index-top">
+                      <img src="/img/abt_2.jpg" alt="" class="img-fluid mb-4 wow zoomIn">
                     </div>
                     <img
                       src="img/Modern_amenities.jpg"
