--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                 <div class="col-lg-6 position-lg-absolute right-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/Prime_Location.jpg) center"
+                    data-bgimage="url(img/ONG_1.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
