--- a/ongoing-project.html
+++ b/ongoing-project.html
@@ -306,7 +306,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-1 jarallax">
-                                    <img src="img/ongoing/Hyper_Local_Economic_Environment.png" class="jarallax-img" alt="">
+                                    <img src="img/ONG_1.jpg" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>
@@ -330,7 +330,7 @@
                         <div class="col-lg-5">
                             <div class="relative wow fadeInUp" data-wow-delay=".3s">   
                                 <div class="shape-mask-2 jarallax">
-                                    <img src="img/ongoing/Advanced_Infrastructure_Excellence.png" class="jarallax-img" alt="">
+                                    <img src="img/ONG_2.jpg" class="jarallax-img" alt="">
                                 </div>
                             </div>
                         </div>                                                
