--- a/index.html
+++ b/index.html
@@ -267,9 +267,6 @@
                     <li>
                       <a class="menu-item" href="/about.html">About</a>
                     </li>
-                    <li>
-                      <a class="menu-item" href="#vision">Vision</a>
-                    </li>
                     <li class="menu-item">
                       <a href="/upcoming-project.html">Projects</a>
                       <ul>
@@ -405,9 +402,9 @@
           <div class="dropdown_about" id="dropdown">
             <div class="btn-group_about">
               <button class="btn_about active_about" id="leaderBtn">
-                Leader
+                Our Leadership
               </button>
-              <button class="btn_about" id="missionBtn">Mission</button>
+              <button class="btn_about" id="missionBtn">Mission & Vision</button>
             </div>
             <div class="content_about active_about" id="leaderContent">
               <section class="relative lines-deco">
@@ -936,7 +933,6 @@
                     <a href="">About</a>
                     <a href="">Upcoming Project</a>
                     <a href="">Ongoing Project</a>
-                    <a href="">Vision</a>
                     <a href="">Contact</a>
                   </ul>
                 </div>
