homepage design updated

--- a/ongoing-project.html
+++ b/ongoing-project.html
@@ -251,7 +251,7 @@
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-6 text-center">
-                          <h1>Capitol Avenu</h1>
+                          <h1>Capitol Avenue</h1>
                             <p class="lead mt-3" style="color: #fff;">Capitol Avenue stands as a premier investment destination in Noida Sector 62, merging modern design, strategic location, and hyper-local advantages that drive financial growth and enhance quality of life remarkably.</p>
                             <ul class="crumb">
                                 <li><a href="index.html">Home</a></li>
