--- a/demo.html
+++ b/demo.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
@@ -252,31 +250,37 @@
               <div class="de-flex sm-pt10">
                 <div class="de-flex-col">
                   <!-- logo begin -->
-                  
+                  <div id="logo">
+                    <a href="/">
+                      <img class="logo-main" src="img/LogoWhite.png" alt="" />
+                      <img class="logo-scroll" src="img/LogoWhite.png" alt="" />
+                      <img class="logo-mobile" src="img/LogoWhite.png" alt="" />
+                    </a>
+                  </div>
                   <!-- logo close -->
                 </div>
                 <div class="de-flex-col header-col-mid">
                   <ul id="mainmenu">
                     <li>
-                      <a style="font-size: 22px;" class="menu-item" href="index.html">Home</a>
+                      <a class="menu-item" href="index.html">Home</a>
                     </li>
                     <li>
-                      <a style="font-size: 22px;" class="menu-item" href="/about.html">About</a>
+                      <a class="menu-item" href="/about.html">About</a>
                     </li>
                     <li class="menu-item">
-                      <a style="font-size: 22px;" href="/upcoming-project.html">Projects</a>
+                      <a href="/upcoming-project.html">Projects</a>
                       <ul>
                         <li>
-                          <a style="font-size: 22px;" href="/ongoing-project.html">Ongoing Project</a>
+                          <a href="/ongoing-project.html">Ongoing Project</a>
                         </li>
                         <li>
-                          <a style="font-size: 22px;" href="/upcoming-project.html">Upcoming Project</a>
+                          <a href="/upcoming-project.html">Upcoming Project</a>
                         </li>
                       </ul>
                     </li>
-                    <li><a style="font-size: 22px;" class="menu-item" href="#features">Features</a></li>
+                    <li><a class="menu-item" href="#features">Features</a></li>
                     <li>
-                      <a style="font-size: 22px;" class="menu-item" href="#contact">Contact</a>
+                      <a class="menu-item" href="#contact">Contact</a>
                     </li>
                   </ul>
                 </div>
@@ -305,12 +309,29 @@
             <div class="row g-3 justify-content-center">
               <div class="spacer-double xs-hide"></div>
 
-              <div id="logo" style="display: flex; justify-content: center;">
-                <a href="/">
-                  <img class="logo-main" src="img/LogoWhite.png" style="width: 400px;" alt="" />
-                  <!-- <img class="logo-scroll" src="img/LogoWhite.png" alt="" /> -->
-                  <!-- <img class="logo-mobile" src="img/LogoWhite.png" alt="" /> -->
-                </a>
+              <div class="col-xl-10 col-lg-12 relative">
+                <h1
+                  class="fs-96 fs-sm-10vw mb-0 lh-1 text-uppercase wow fadeInRight"
+                >
+                  Building Landmarks
+                </h1>
+                <!-- <div
+                  class="abs w-30 end-0 bottom-0 sm-hide wow fadeInRight"
+                  data-wow-delay=".2s"
+                >
+                  <p>
+                    With every project, we strive to leave a mark on the skyline
+                    and an imprint on people’s lives.
+                  </p>
+                </div> -->
+              </div>
+              <div class="col-xl-10 col-lg-12 text-end">
+                <h1
+                  class="fs-96 fs-sm-10vw mb-0 lh-1 text-uppercase wow fadeInLeft"
+                  data-wow-delay=".4s"
+                >
+                  Crafting The Future
+                </h1>
               </div>
             </div>
 
