--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
               <div id="logo" style="display: flex; justify-content: center;">
                 <a href="/">
-                  <img class="logo-main" src="img/LogoWhite.png" style="width: 400px;" alt="" />
+                  <img class="logo-main" src="img/LogoWhite.png" style="width: 40vw;" alt="" />
                   <!-- <img class="logo-scroll" src="img/LogoWhite.png" alt="" /> -->
                   <!-- <img class="logo-mobile" src="img/LogoWhite.png" alt="" /> -->
                 </a>
@@ -349,7 +349,8 @@
               <div class="col-lg-4 text-center">
                 <div class="wow scaleIn bg-white">
                   <div class="subtitle id-color mb-3">About</div>
-                  <img src="/img/LogoBrown.png" alt=""/>
+                  <!-- <img src="/img/LogoBrown.png" alt=""/> -->
+                  <p class="subtitle id-color wow fadeInUp mb-3" style="font-size: 20px;">Pincode</p>
                   <p class="wow fadeInUp bg-white">
                     PINCODE is an idea born from ambition, shaped by experience,
                     and driven by vision. We are a new-age real estate
