--- a/about.html
+++ b/about.html
@@ -341,7 +341,8 @@
                 <div
                   class="col-lg-3 col-md-6 col-sm-12 d-flex flex-column align-items-center"
                 >
-                  <img src="img/manpreet.jpg" class="img-fluid z-index-top" alt="" style="height: 350px; object-fit: cover;"/>
+                  <!-- <img src="img/manpreet.jpg" class="img-fluid z-index-top" alt="" style="height: 350px; object-fit: cover;"/> -->
+                <p>Photo to be clicked</p>
                   <div class="p-3 text-center">
                     <h4 class="mb-0">Manpreet Singh</h4>
                     <p class="mb-2">Director</p>
@@ -368,7 +369,8 @@
                 <div
                   class="col-lg-3 col-md-6 col-sm-12 d-flex flex-column align-items-center"
                 >
-                  <img src="img/gurpreet.jpg" class="img-fluid z-index-top" alt="" style="height: 350px; object-fit: cover;"/>
+                <p>Photo to be clicked</p>
+                  <!-- <img src="img/gurpreet.jpg" class="img-fluid z-index-top" alt="" style="height: 350px; object-fit: cover;"/> -->
                   <div class="p-3 text-center">
                     <h4 class="mb-0">Gurpreet Singh</h4>
                     <p class="mb-2">Director</p>
