--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <div class="wow scaleIn bg-white">
                   <div class="subtitle id-color mb-3">About</div>
                   <!-- <img src="/img/LogoBrown.png" alt=""/> -->
-                  <p class="subtitle id-color wow fadeInUp mb-3" style="font-size: 20px;">Pincode</p>
+                  <div class="subtitle id-color wow fadeInUp mb-3">Pincode</div>
                   <p class="wow fadeInUp bg-white">
                     PINCODE is an idea born from ambition, shaped by experience,
                     and driven by vision. We are a new-age real estate
