--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -304,7 +304,7 @@
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Robust Infrastructure Development</h2>
                   <p>
-                    Ayodhya is witnessing significant infrastructure development with improved roads, connectivity, and urban planning. This rapid development boosts investor confidence, raises property values, and creates a thriving environment for commercial investments.
+                    With ₹85,000 crore planned under the Ayodhya Master Plan 203. Ayodhya is witnessing significant infrastructure development with improved roads, connectivity, and urban planning. This rapid development boosts investor confidence, raises property values, and creates a thriving environment for commercial investments
                   </p>
                 </div>
               </div>
@@ -315,7 +315,7 @@
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Appreciation Through Demand</h2>
                   <p>
-                    Investments in Ayodhya are poised for substantial appreciation driven by demand. The growing influx of residents and businesses stimulates market dynamics, leading to sustained property value growth and high returns.
+                    With ₹2,200 crore to be invested in developing a 1,200-acre township over 5 years. Investments in Ayodhya are poised for substantial appreciation driven by demand. The growing influx of residents and businesses stimulates market dynamics, leading to sustained property value growth and high returns.
                   </p>
                 </div>
               </div>
@@ -350,7 +350,7 @@
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Spiritual Tourism Boost</h2>
                   <p>
-                    Ayodhya’s rich cultural heritage attracts spiritual tourism, fueling local economic growth. This influx of visitors enhances demand for hospitality, retail, and real estate, driving investment opportunities and creating revenue streams.
+                    Ayodhya’s rich cultural heritage attracts spiritual tourism, fueling local economic growth. Over 500 private initiatives are underway across religious sites in UP, including Ayodhya. This promotes an additional influx of visitors, enhances demand for hospitality, retail, and real estate, driving investment opportunities and creating revenue streams.
                   </p>
                 </div>
               </div>
@@ -396,7 +396,7 @@
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Enhanced Community Infrastructure</h2>
                   <p>
-                    Investing in Ayodhya supports development of community infrastructure including upgraded utilities, transportation networks, and public spaces. These improvements boost quality of life and drive property appreciation over the long term.
+                    Investing in Ayodhya supports development of community infrastructure including upgraded utilities, transportation networks, and public spaces. This also includes the construction of a 67.17-kilometer-long ring road around Ayodhya, featuring two major bridges over the Saryu River, seven flyovers, and four railway overbridges. These improvements boost quality of life and drive property appreciation over the long term.
                   </p>
                 </div>
               </div>
@@ -407,7 +407,7 @@
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Capitalizing on Demand Surges</h2>
                   <p>
-                    A continuous influx of domestic and international investors capitalizes on demand surges, fueling market confidence, elevating asset values, and transforming Ayodhya into a premium investment destination with consistent upward trends.
+                    A continuous influx of domestic and international investors capitalizes on demand surges, fueling market confidence, elevating asset values, and transforming Ayodhya into a premium investment destination with consistent upward trends. This is due to the New airport (Maharishi Valmiki International Airport), better roads, and rail links that are under development.
                   </p>
                 </div>
               </div>
