style tag updated

--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
                       <a style="font-size: 22px;" href="/upcoming-project.html">Projects</a>
                       <ul>
                         <li>
-                          <a style="font-size: 22px;" href="/ongoing-project.html">Ongoing Project</a>
+                          <a  href="/ongoing-project.html">Ongoing Project</a>
                         </li>
                         <li>
-                          <a style="font-size: 22px;" href="/upcoming-project.html">Upcoming Project</a>
+                          <a  href="/upcoming-project.html">Upcoming Project</a>
                         </li>
                       </ul>
                     </li>
@@ -909,11 +909,11 @@
                 <div>
                   <h3 class="ml-4">Navigation</h3>
                   <ul style="display: flex; flex-direction: column; justify-content: center; padding-left: 0;">
-                    <a href="">Home</a>
-                    <a href="">About</a>
-                    <a href="">Upcoming Project</a>
-                    <a href="">Ongoing Project</a>
-                    <a href="">Contact</a>
+                    <a href="/index.html">Home</a>
+                    <a href="/about.html">About</a>
+                    <a href="/upcoming-project.html">Upcoming Project</a>
+                    <a href="/ongoing-project.html">Ongoing Project</a>
+                    <a href="#contact">Contact</a>
                   </ul>
                 </div>
                 <div>
