--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -220,13 +220,13 @@
                 <div class="de-flex-col header-col-mid">
                   <ul id="mainmenu">
                     <li>
-                      <a class="menu-item" href="index.html">Home</a>
+                      <a style="font-size: 20px;" class="menu-item" href="index.html">Home</a>
                     </li>
                     <li>
-                      <a class="menu-item" href="/about.html">About</a>
+                      <a style="font-size: 20px;" class="menu-item" href="/about.html">About</a>
                     </li>
                     <li class="menu-item">
-                      <a href="/upcoming-project.html">Projects</a>
+                      <a style="font-size: 20px;" href="/upcoming-project.html">Projects</a>
                       <ul>
                         <li>
                           <a href="/ongoing-project.html">Ongoing Project</a>
@@ -236,9 +236,9 @@
                         </li>
                       </ul>
                     </li>
-                    <li><a class="menu-item" href="#features">Features</a></li>
+                    <li><a style="font-size: 20px;" class="menu-item" href="#features">Features</a></li>
                     <li>
-                      <a class="menu-item" href="#contact">Contact</a>
+                      <a style="font-size: 20px;" class="menu-item" href="/index.html#contact">Contact</a>
                     </li>
                   </ul>
                 </div>
@@ -463,11 +463,11 @@
                 <div>
                   <h3 class="ml-4">Navigation</h3>
                   <ul style="display: flex; flex-direction: column; justify-content: center; padding-left: 0;">
-                    <a href="">Home</a>
-                    <a href="">About</a>
-                    <a href="">Upcoming Project</a>
-                    <a href="">Ongoing Project</a>
-                    <a href="">Contact</a>
+                    <a href="/index.html">Home</a>
+                    <a href="/about.html">About</a>
+                    <a href="/upcoming-project.html">Upcoming Project</a>
+                    <a href="/ongoing-project.html">Ongoing Project</a>
+                    <a href="/index.html#contact">Contact</a>
                   </ul>
                 </div>
                 <div>
