--- a/ongoing-project.html
+++ b/ongoing-project.html
@@ -221,7 +221,7 @@
                           </li>
                         </ul>
                       </li>
-                      <li><a style="font-size: 20px;" class="menu-item" href="#features">Features</a></li>
+                      <li><a style="font-size: 20px;" class="menu-item" href="/index.html#features">Features</a></li>
                       <li>
                         <a style="font-size: 20px;" class="menu-item" href="/index.html#contact">Contact</a>
                       </li>
