Updated homepage images

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
         <section class="jarallax pt100 bg-dark text-light relative">
           <div class="overlay op-7"></div>
-          <img src="img/Mast_main.jpg" class="jarallax-img" alt="" />
+          <img src="img/home_img/Main_Banner.jpg" class="jarallax-img" alt="" />
           <div class="container relative z-2">
             <div class="row g-3 justify-content-center">
               <div class="spacer-double xs-hide"></div>
@@ -340,13 +340,13 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="abs top-0 w-100">
                     <div class="shape-mask-1 jarallax">
-                      <img src="img/AB1_Alt.jpg" class="jarallax-img" alt="" />
+                      <img src="img/home_img/About_us1.jpg" class="jarallax-img" alt="" />
                     </div>
                   </div>
                 </div>
               </div>
 
-              <div class="col-lg-4 text-center">
+              <div class="col-lg-4 ">
                 <div class="wow scaleIn bg-white">
                   <div class="subtitle id-color mb-3">About</div>
                   <!-- <img src="/img/LogoBrown.png" alt=""/> -->
@@ -367,7 +367,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="abs top-0 w-100">
                     <div class="shape-mask-1 jarallax">
-                      <img src="img/PRLX_2.png" class="jarallax-img" alt="" />
+                      <img src="img/home_img/About_us_2.jpg" class="jarallax-img" alt="" />
                     </div>
                   </div>
                 </div>
@@ -449,9 +449,9 @@
                   <div class="row g-4">
                     <div class="col-md-6">
                       <div class="relative" style="background-color: #fff">
-                        <!-- <div class="subtitle id-color wow fadeInUp text-center">Our</div> -->
-                        <h2 class="text-center">Mission</h2>
-                        <p class="mv-para text-center">
+                        <!-- <div class="subtitle id-color wow fadeInUp ">Our</div> -->
+                        <h2 class="">Mission</h2>
+                        <p class="mv-para ">
                           To develop intelligent, inspiring spaces that elevate
                           lives, empower businesses, and deliver enduring value.
                           Our mission is to create environments where innovation
@@ -468,8 +468,8 @@
                     <div class="col-md-6">
                       <div class="relative" style="background-color: #fff">
                         <!-- <div class="subtitle id-color wow fadeInUp">Our</div> -->
-                        <h2 class="text-center">Vision</h2>
-                        <p class="mv-para text-center">
+                        <h2 class="">Vision</h2>
+                        <p class="mv-para ">
                           Our vision is to become India’s most trusted name in
                           landmark developments by consistently delivering
                           exceptional projects that stand as symbols of
@@ -501,7 +501,7 @@
               <div class="col-md-6">
                 <div class="relative">
                   <img
-                    src="img/Current_Project.jpg"
+                    src="img/home_img/Ongoing_1.jpg"
                     class="img-fluid wow fadeInUp"
                     alt=""
                   />
@@ -548,10 +548,10 @@
           class="jarallax relative overflow-hidden text-light section-dark pt60 pb60"
         >
           <div class="overlay op-5"></div>
-          <img src="img/Home_Main_BG.png" class="jarallax-img" alt="" />
+          <img src="img/home_img/Features_Banner.jpg" class="jarallax-img" alt="" />
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 offset-lg-2 text-center">
+              <div class="col-lg-8 offset-lg-2 ">
                 <div
                   class="subtitle id-color wow fadeInUp mb-3"
                   style="color: #fff"
@@ -572,17 +572,17 @@
                 <div class="col-lg-6 position-lg-absolute right-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/ONG_1.jpg) center"
+                    data-bgimage="url(img/home_img/Prime_Location.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 py-5 pe-lg-5">
-                  <h3 class="text-center">Prime Location</h3>
+                  <h3 class="">Prime Location</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
-                  <p class="pe-lg-5 text-center">
+                  <p class="pe-lg-5 ">
                     Situated in the heart of Noida’s thriving business district,
                     Capitol Avenue offers unrivaled accessibility to major
                     transportation hubs, corporate centers, and premium
@@ -609,17 +609,17 @@
                 <div class="col-lg-6 position-lg-absolute left-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/Modern_Design.jpg) center"
+                    data-bgimage="url(img/home_img/Modern_Design.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 offset-lg-6 py-5 ps-lg-5">
-                  <h3 class="text-center">Modern Design</h3>
+                  <h3 class="">Modern Design</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
-                  <p class="pe-lg-5 text-center">
+                  <p class="pe-lg-5 ">
                     Capitol Avenue showcases a modern architectural design that
                     seamlessly blends functionality with aesthetic appeal. The
                     thoughtfully planned layout, cutting-edge infrastructure,
@@ -646,17 +646,17 @@
                 <div class="col-lg-6 position-lg-absolute right-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/tce.jpg) center"
+                    data-bgimage="url(img/home_img/amenities.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 py-5 pe-lg-5">
-                  <h3 class="text-center">State-of-the-Art Amenities</h3>
+                  <h3 class="">State-of-the-Art Amenities</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
-                  <p class="pe-lg-5 text-center">
+                  <p class="pe-lg-5 ">
                     Offering a comprehensive range of state-of-the-art
                     amenities, Capitol Avenue ensures a superior working and
                     shopping experience. Facilities include advanced security,
@@ -683,17 +683,17 @@
                 <div class="col-lg-6 position-lg-absolute left-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/Modern_amenities.jpg) center"
+                    data-bgimage="url(img/home_img/integrated.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 offset-lg-6 py-5 ps-lg-5">
-                  <h3 class="text-center">Integrated Commercial Ecosystem</h3>
+                  <h3 class="">Integrated Commercial Ecosystem</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 4 Guests </span>
                     <span class="me-4"> 60 ft </span>
                   </div> -->
-                  <p class="pe-lg-5 text-center">
+                  <p class="pe-lg-5 ">
                     Capitol Avenue establishes an integrated commercial
                     ecosystem by uniting office spaces, high-street retail
                     zones, and recreational areas. This holistic environment
@@ -742,7 +742,7 @@
                     style="background-size: cover; background-repeat: no-repeat"
                   >
                     <div
-                      class="text-center"
+                      class=""
                       style="
                         background-size: cover;
                         background-repeat: no-repeat;
@@ -836,7 +836,7 @@
                     style="background-size: cover; background-repeat: no-repeat"
                   >
                     <div
-                      class="text-center"
+                      class=""
                       style="
                         background-size: cover;
                         background-repeat: no-repeat;
@@ -881,7 +881,7 @@
           <div class="row g-4 align-items-center">
             <div class="col-md-12">
               <div
-                class="d-lg-flex align-items-center justify-content-between text-center"
+                class="d-lg-flex align-items-center justify-content-between "
               >
               <div>
                 <img src="img/LogoWhite.png" class="w-250px" alt="" /><br />
@@ -935,7 +935,7 @@
         <div class="subfooter">
           <div class="container">
             <div class="row">
-              <div class="col-md-12 text-center">
+              <div class="col-md-12 ">
                 © 2025 Pincode Infra. All Rights Reserved.
               </div>
             </div>
