--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         background-color: #b4aea7;
         position: relative;
         width: 100%;
-        height: 100svh;
+        height: 100vh;
         overflow: hidden;
         padding: 0;
       }
